--- a/src/app/pages/feeds/menu/donation/donation.page.html
+++ b/src/app/pages/feeds/menu/donation/donation.page.html
@@ -1,17 +1,17 @@
 <ion-content>
-    <ion-grid class="container" [class.darkContainer]="theme.darkMode">
-      <h1>Support Feeds</h1>
-      <p>{{'DonationPage.description' | translate}}</p>
-      <h2>{{ 'common.des4'|translate }}</h2>
-      <h3 (click)="clickAddress()">{{ elaAddress }}</h3>
-      <ion-row class="btn-row">
-        <ion-button (click)="donation()">
-          <ion-label>
-            {{ 'DonationPage.donation' | translate }}
-          </ion-label>
-        </ion-button>
-      </ion-row>
-    </ion-grid>
+  <ion-grid class="container" [class.darkContainer]="theme.darkMode" [class.blur]="isShowPrompt">
+    <h1>Support Feeds</h1>
+    <p>{{'DonationPage.description' | translate}}</p>
+    <h2>{{ 'common.des4'|translate }}</h2>
+    <h3 (click)="clickAddress()">{{ elaAddress }}</h3>
+    <ion-row class="btn-row">
+      <ion-button (click)="donation()">
+        <ion-label>
+          {{ 'DonationPage.donation' | translate }}
+        </ion-label>
+      </ion-button>
+    </ion-row>
+  </ion-grid>
 </ion-content>
 
 <!-- <ion-content class="ion-padding" [class.darkContainer]="theme.darkMode">
