--- a/src/app/components/payprompt/payprompt.component.scss
+++ b/src/app/components/payprompt/payprompt.component.scss
@@ -1,7 +1,7 @@
 .container {
     background: #ffffff;
     height: 100%;
-    border: 1px solid #620ad4;
+    border: 1px solid #368bff;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
@@ -80,7 +80,7 @@
   
         .confirm {
             box-shadow: 0 3px 15px 0 #ededf0;
-            background-color: #6e23d0;
+            background-color: #368bff;
     
             ion-label {
                 color: #ffffff;
