--- a/src/app/pages/servers/servers.html
+++ b/src/app/pages/servers/servers.html
@@ -12,6 +12,7 @@
     </ion-refresher-content>
   </ion-refresher>
 
+  <!-------------------- NO FEEDS -------------------->
   <div *ngIf="serverList.length === 0 && myFeedSource === null" class="empty-container">
     <img src="./assets/images/empty-feeds-icon.svg">
     <h1>{{ 'common.allempty'| translate }}</h1>
@@ -32,8 +33,80 @@
     </ion-row>
   </div>
   
-  <div class="feed-source" [class.darkContainer]="theme.darkMode">
-    <div class="feed-source-div" *ngIf="myFeedSource != null"> 
+  <!-------------------- HAS FEEDS -------------------->
+  <ion-grid class="feedSource-container" [class.darkContainer]="theme.darkMode">
+    <!-------------------- SERVER FEEDS -------------------->
+    <div class="source" *ngIf="serverList.length > 0">
+      <ion-row class="feedSource-header">
+        <img [src]="!theme.darkMode ? 'assets/images/play.svg' : 'assets/images/play-dark.svg'" [class.rotate]="showServers" (click)="showServers = !showServers">
+        <ion-label>{{ 'ServersPage.currentFeedSources' | translate }}</ion-label>
+      </ion-row>
+      <div *ngIf="showServers">
+        <ion-row
+          class="item-row ripple ion-activatable"
+          *ngFor="let server of serverList"
+          (click)="navToServerInfo(server.nodeId, false)"
+        >
+          <ion-col size="2.75" class="left-col">
+            <div class="img-container">
+              <img src="assets/images/profile-2.svg">
+              <div class="indicator" [class.online]="checkServerStatus(server.nodeId) === 0"></div>
+            </div>
+          </ion-col>
+          <ion-col size="7.5" class="middle-col">
+            <h1>{{ server.name }}</h1>
+            <p>{{ server.owner }}</p>
+            <ion-row class="users-row">
+              <img [src]="checkServerStatus(server.nodeId) === 0 ? 'assets/images/users-online.svg' : 'assets/images/users-offline.svg'">&nbsp;
+              <h2 [class.online]="checkServerStatus(server.nodeId) === 0">{{checkConnectClient(server.nodeId)}} <span>{{'ServersPage.users'| translate}}</span></h2>
+            </ion-row>
+          </ion-col>
+          <ion-col offset="0.5" size="1.25" class="right-col">
+            <img src="assets/images/chevron-thin-right.svg">
+          </ion-col>
+          <ion-ripple-effect></ion-ripple-effect>
+        </ion-row>
+      </div>
+    </div>
+    <!-------------------- MY FEEDS -------------------->
+    <div class="source" *ngIf="myFeedSource !== null">
+      <ion-row class="feedSource-header">
+        <img [src]="!theme.darkMode ? 'assets/images/play.svg' : 'assets/images/play-dark.svg'" [class.rotate]="showMyFeeds" (click)="showMyFeeds = !showMyFeeds">
+        <ion-label>{{ 'ServersPage.myFeedSources' | translate }}</ion-label>
+      </ion-row>
+      <div *ngIf="showMyFeeds">
+        <ion-row class="item-row ripple ion-activatable" (click)="navToServerInfo(myFeedSource.nodeId, true)">
+          <ion-col size="2.75" class="left-col">
+            <div class="img-container">
+              <img src="assets/images/profile-2.svg">
+              <div class="indicator" [class.online]="checkServerStatus(myFeedSource.nodeId) === 0"></div>
+            </div>
+          </ion-col>
+          <ion-col size="7.5" class="middle-col">
+            <h1>{{ myFeedSource.name }}</h1>
+            <p>{{ myFeedSource.owner }}</p>
+            <ion-row class="users-row">
+              <img [src]="checkServerStatus(myFeedSource.nodeId) === 0 ? 'assets/images/users-online.svg' : 'assets/images/users-offline.svg'">&nbsp;
+              <h2 [class.online]="checkServerStatus(myFeedSource.nodeId) === 0">{{checkConnectClient(myFeedSource.nodeId)}} <span>{{'ServersPage.users'| translate}}</span></h2>
+            </ion-row>
+          </ion-col>
+          <ion-col offset="0.5" size="1.25" class="right-col">
+            <img src="assets/images/chevron-thin-right.svg">
+          </ion-col>
+          <ion-ripple-effect></ion-ripple-effect>
+        </ion-row>
+      </div>  
+    </div>
+    <ion-row class="buttons-row">
+      <ion-label (click)="exploreFeedSource()">{{ 'ServersPage.addNewFeedSources' | translate }}</ion-label>
+      <ion-label *ngIf="myFeedSource === null" (click)="bindFeedSource()">{{ 'ServersPage.createNewFeedSource' | translate}}</ion-label>
+    </ion-row>
+  </ion-grid>
+</ion-content>
+
+    <!-- 
+
+          <div class="feed-source-div" *ngIf="myFeedSource != null"> 
       <img class="feed-source-img" src="assets/images/play.svg" *ngIf="!theme.darkMode">
       <img class="feed-source-img" src="assets/images/play-dark.svg" *ngIf="theme.darkMode">
       <ion-label class="feed-source-text white">{{'ServersPage.myFeedSources'| translate}}</ion-label>
@@ -73,10 +146,9 @@
         </ion-card-content>
       </ion-card>
     </div>
-
-    <div class="feed-source-div" *ngIf="serverList.length >0" [class.darkContainer]="theme.darkMode">
-      <img class="feed-source-img" src="assets/images/play.svg" *ngIf="!theme.darkMode">
-      <img class="feed-source-img" src="assets/images/play-dark.svg" *ngIf="theme.darkMode">
+      
+      <div class="feed-source-div" *ngIf="serverList.length > 0" [class.darkContainer]="theme.darkMode">
+      <img class="feed-source-img" [src]="!theme.darkMode ? 'assets/images/play.svg' : 'assets/images/play-dark.svg'" [class.rotate]="showServers" (click)="showServers = !showServers">
       <ion-label class="feed-source-text white">{{'ServersPage.currentFeedSources'| translate}}</ion-label>
 
       <ion-card class="ion-no-padding ion-no-margin"  class="feed-source-card" *ngFor="let server of serverList" (click)="navToServerInfo(server.nodeId, false)">
@@ -114,14 +186,14 @@
           </div>
         </ion-card-content>
       </ion-card>
+    
       <div class="button-div" *ngIf="myFeedSource == null">
         <div class="explore-feed-source-button" (click)="exploreFeedSource()">{{'ServersPage.addNewFeedSources'| translate}}</div>
         <div class="bind-feed-source-button" (click)="bindFeedSource()">{{'ServersPage.createNewFeedSource'| translate}}</div>
       </div>
-    </div>
-    <div class="button-div" *ngIf="myFeedSource != null">
-      <div class="explore-feed-source-button" (click)="exploreFeedSource()">{{'ServersPage.addNewFeedSources'| translate}}</div>
-    </div> 
-  </div>
+    </div> -->
 
-</ion-content>
+
+
+
+
