--- a/src/app/pages/servers/servers.scss
+++ b/src/app/pages/servers/servers.scss
@@ -1,16 +1,3 @@
-ion-header {
-
-  ion-toolbar {
-    margin-top: 25px;
-    margin-bottom: 25px;
-
-    ion-title {
-    font-size: 25px;
-    font-weight: bold;
-    }
-  }
-}
-
 .empty-container {
   .btn-row {
     ion-button {
@@ -23,6 +10,196 @@ ion-header {
     margin: 7.5px 0;
   }
 }
+
+.feedSource-container {
+  padding: 10px 20px;
+
+  .source {
+    padding: 10px 0;
+
+    .feedSource-header {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      margin-bottom: 10px;
+  
+      img {
+        width: 11.4px;
+        height: 8.5px;
+        transform: rotate(-90deg);
+      }
+  
+      .rotate {
+        transform: rotate(0deg);
+      }
+  
+      ion-label {
+        font-size: 18px;
+        font-weight: 600;
+        margin-left: 10px;
+      }
+    }
+  
+    .item-row {
+      width: 100%;
+      border-radius: 16px;
+      padding: 0;
+      margin-bottom: 10px;
+      box-shadow: 0 3px 15px 0 #ededf0;
+      background-color: #ffffff;
+  
+      ion-col {
+        padding-top: 12.5px;
+        padding-bottom: 12.5px;
+      }
+      
+      .left-col {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 10px;
+  
+        .img-container {
+          position: relative;
+  
+          img {
+            width: 56px;
+            height: 56px;
+            object-fit: contain;
+          }
+  
+          .indicator {
+            position: absolute;
+            z-index: 10;
+            top: 1.5px;
+            left: 1.5px;
+            background: #cdcde6;
+            height: 13px;
+            width: 13px;
+            border-radius: 100%;
+          }
+        }
+      }
+      
+      .middle-col {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        overflow: hidden;
+  
+        h1, p {
+          margin: 0;
+          text-align: left;
+        }
+  
+        h1 {
+          font-size: 17px;
+          font-weight: 600;
+        }
+    
+        p {
+          font-size: 11px;
+          font-weight: 500;
+          color: #8888b0;
+          padding: 3px 0;
+          word-break: break-all;
+        }
+  
+        .users-row {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          padding: 0;
+  
+          img {
+            width: 18.1px;
+            height: 14.7px;
+          }
+  
+          h2 {
+            margin: 0;
+            color: #a0a2c4;
+            font-size: 14px;
+            font-weight: bold;
+  
+            span {
+              font-size: 11px;
+              font-weight: 500;  
+            }
+          }
+        }
+      }
+      
+      .right-col {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 16px;
+        box-shadow: 0 3px 15px 0 #e8e8e8;
+  
+        img {
+          width: 6.7px;
+          height: 12.2px;
+        }
+      }
+    }
+  }
+
+  .buttons-row {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 30px 15px;
+
+    ion-label {
+      font-size: 17px;
+      font-weight: 500;
+      color: #368bff;
+      margin-bottom: 20px;
+    }
+  }
+}
+
+.darkContainer {
+  .source {
+    .item-row {
+      box-shadow: 0 3px 15px 0 #151626;
+      background-color: #2e2f4e;
+  
+      .left-col {
+        .img-container {
+          .indicator {
+            background: #cfd1f7;
+          }
+        } 
+      }
+      
+      .middle-col {  
+        p {
+          color: #cfd1f7;
+        }
+  
+        .users-row {
+          h2 {
+            color: #cfd1f7;
+          }
+        }
+      }
+      
+      .right-col {
+        box-shadow: 0 3px 15px 0 #151626;
+        background-color: #2e2f4e;
+      }
+    }
+  }
+}
+
+.online {
+  color: #368bff;
+}
+
+
 
 // .div {
 //   width: 200px;
