--- a/src/app/components/myfeeds/myfeeds.component.scss
+++ b/src/app/components/myfeeds/myfeeds.component.scss
@@ -1,3 +1,7 @@
+.empty-container {
+    margin-top: 50px;
+}
+
 .darkContainer{
     .channel-detail-div .channel-detail-text-div .white{
         color: #ffffff;
