--- a/src/app/pages/servers/server-info/server-info.scss
+++ b/src/app/pages/servers/server-info/server-info.scss
@@ -1,3 +1,112 @@
+/* .container {
+  padding: 10px;
+
+  .server-header {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 17px;
+    box-shadow: 0 3px 15px 0 #ededf0;
+    background-color: #ffffff;
+  
+    ion-img {
+      width: 56px;
+      height: 56px;
+      object-fit: cover;
+    }
+  
+    h1 {
+      margin: 0;
+      padding: 15px 0px 7.5px;
+      font-size: 16px;
+      font-weight: 600;
+      text-align: center;
+    }
+  
+    p {
+      margin: 0;
+      padding-bottom: 15px; 
+      font-size: 15px;
+      font-weight: 500;
+      letter-spacing: 0.8px;
+      text-align: center;
+      overflow: hidden;
+    }
+
+    .four{
+      text-align: center;
+     
+    }
+    
+    .four .online-circle{
+        display:inline-block;
+        vertical-align: middle;
+        width: 16px;
+        height: 16px;
+        background-color: #368bff;
+        -moz-border-radius: 8px;
+        -webkit-border-radius: 8px;
+        border-radius: 8px;
+    }
+    
+    .four .online{
+      display:inline-block;
+      margin-right: 12.3px;
+      margin-left:4.1px;
+      font-size: 11px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      color: #368bff;
+    }
+    
+    .four .usersonline{
+      display:inline-block;
+      vertical-align: middle;
+      width: 18.1px;
+      height: 14.7px;
+    }
+    
+    .four .clientNumber{
+      display:inline-block;
+      margin-left: 3.6px;
+      margin-right:3px;
+      font-size: 14px;
+      font-weight: bold;
+      font-stretch: normal;
+      font-style: normal;
+      color: #368bff;
+    
+    }
+    
+    .four .users{
+      display:inline-block;
+      font-size: 11px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      color: #368bff;
+    }
+    
+    .four .offline-circle{
+      display:inline-block;
+      vertical-align: middle;
+      width: 16px;
+      height: 16px;
+      -moz-border-radius: 8px;
+      -webkit-border-radius: 8px;
+      border-radius: 8px;
+      background-color: #cdcde6;
+    }
+    
+    .four .offlinecolor{
+      color: #a0a2c4;
+    }
+  }
+} */
+
 .first{
      position: relative;
      text-align: center;
