--- a/src/app/pages/servers/servers.scss
+++ b/src/app/pages/servers/servers.scss
@@ -22,6 +22,7 @@
       justify-content: flex-start;
       align-items: center;
       margin-bottom: 10px;
+      margin-left: 15px;
   
       img {
         width: 11.4px;
