--- a/src/app/pages/feeds/menu/profiledetail/profiledetail.page.scss
+++ b/src/app/pages/feeds/menu/profiledetail/profiledetail.page.scss
@@ -1,47 +1,18 @@
 .container {
     padding: 40px 25px;
 
-    .detail-row {
-        padding-top: 20px;
-        padding-bottom: 20px;
-        border-bottom: 2px solid rgba(34, 34, 34, 0.07);
-    
-        ion-col {
-          padding: 0;
-        }
-    
-        .left-col {
-          h1, h2 {
-            margin: 0;
-          }
-    
-          h1 {
-            font-size: 11px;
-            font-weight: 700;
-            letter-spacing: 2.4px;
-            text-transform: capitalize;
-            color: #8888b0;
-            margin-bottom: 5px;
-          }
-    
-          h2 {
-            font-size: 15px;
-            font-weight: 500;
-            letter-spacing: 0.8px;
-          }
-        }
-    
-        .right-col {
-          display: flex;
-          justify-content: flex-end;
-          align-items: center;
-        }
+    .removeBorder {
+        border-bottom: none;
     }
 }
 
 .darkContainer {
   .detail-row {
     border-bottom: 2px solid #2e2f4e;
+  }
+
+  .removeBorder {
+    border-bottom: none;
   }
 }
 
