--- a/src/app/pages/servers/server-info/server-info.html
+++ b/src/app/pages/servers/server-info/server-info.html
@@ -1,35 +1,41 @@
 <ion-header *ngIf="connectionStatus == 1">
   <div class="offline-header"></div>
 </ion-header>
-<ion-content [class.darkContainer]="theme.darkMode" [class.lightContainer]="!theme.darkMode" class="ion-padding">
-<!-- 
-  <ion-grid class="container">
+
+<ion-content>
+  <ion-grid class="container" [class.darkContainer]="theme.darkMode">
     <div class="server-header">
       <ion-img class="headerImg" src="./assets/images/profile-2.svg"></ion-img>
       <h1>{{ name }}</h1>
       <p>{{ introduction }}</p>
- 
-      <div class="four" *ngIf="serverStatus === 0">
-        <span class="online-circle"></span>
-        <span class="online">{{'ServerInfoPage.online' | translate}}</span>
-        <ion-img  src="assets/images/users-online.svg" class="usersonline"></ion-img>
-        <span class="clientNumber">{{clientNumber}}</span>
+      <div class="offline" [class.online]="serverStatus === 0">
+        <span class="circle"></span>
+        <span class="status" *ngIf="serverStatus === 0">{{ 'ServerInfoPage.online' | translate}}</span>
+        <span class="status" *ngIf="serverStatus === 1">{{ 'ServerInfoPage.offline' | translate}}</span>
+        <ion-img [src]="serverStatus === 0 ? 'assets/images/users-online.svg' : 'assets/images/users-offline.svg'" class="usersonline"></ion-img>
+        <span class="clientNumber">{{ clientNumber }}</span>
         <span class="users">{{'ServerInfoPage.users' | translate}}</span>
       </div>
-
-      <div class="four" *ngIf="serverStatus === 1">
-        <span class="offline-circle"></span>
-        <span class="online offlinecolor">{{'ServerInfoPage.offline' | translate}}</span>
-        <ion-img  src="assets/images/users-offline.svg" class="usersonline"></ion-img>
-        <span class="clientNumber offlinecolor">{{clientNumber}}</span>
-        <span class="users offlinecolor">{{'ServerInfoPage.users' | translate}}</span>
-      </div>
     </div>
-    <ion-img [src]="!theme.darkMode ? './assets/images/edit.svg' : './assets/images/edit-dark.svg'"></ion-img>
-  </ion-grid> -->
+     <ion-row *ngFor="let server of serverDetails" class="detail-row" [class.removeBorder]="serverDetails.indexOf(server) === serverDetails.length - 1">
+        <ion-col size="12" class="left-col">
+            <h1>{{ server.type.toUpperCase() }}</h1>
+            <h2 *ngIf="!server.qrcode">{{ server.details }}</h2>
+            <div *ngIf="server.qrcode" class="qr-container">
+              <div class="qrcode">
+                <qrcode [qrdata]="feedsUrl" [size]="150" [level]="'M'"></qrcode>
+              </div>
+            </div>
+        </ion-col>
+      </ion-row>
+    <!-- <ion-img [src]="!theme.darkMode ? './assets/images/edit.svg' : './assets/images/edit-dark.svg'"></ion-img> -->
+  </ion-grid>
+</ion-content>
 
 
-   <div class="edit" (click)="clickEdit()" *ngIf="address ==='' && checkIsMine() == 0">
+<!-- 
+<ion-content [class.darkContainer]="theme.darkMode" [class.lightContainer]="!theme.darkMode" class="ion-padding">
+  <div class="edit" (click)="clickEdit()" *ngIf="address ==='' && checkIsMine() == 0">
        <ion-img src="./assets/images/edit.svg" *ngIf="!theme.darkMode"></ion-img>
        <ion-img src="./assets/images/edit-dark.svg" *ngIf="theme.darkMode"></ion-img>
    </div>
@@ -138,6 +144,6 @@
     <ion-button style="margin-top: 25px;" expand="block" mode="ios"  color="danger" (click)="deleteFeedSource()">
       <ion-label>{{'ServerInfoPage.deleteFeedSource' | translate}}</ion-label>
     </ion-button>
-  </div>
-  
+  </div> 
 </ion-content>
+-->
