--- a/src/app/pages/servers/server-info/server-info.scss
+++ b/src/app/pages/servers/server-info/server-info.scss
@@ -1,5 +1,5 @@
-/* .container {
-  padding: 10px;
+.container {
+  padding: 20px;
 
   .server-header {
     padding: 20px;
@@ -10,6 +10,7 @@
     border-radius: 17px;
     box-shadow: 0 3px 15px 0 #ededf0;
     background-color: #ffffff;
+    margin-bottom: 25px;
   
     ion-img {
       width: 56px;
@@ -35,79 +36,105 @@
       overflow: hidden;
     }
 
-    .four{
-      text-align: center;
-     
-    }
-    
-    .four .online-circle{
+    .offline {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      ion-img {
+        width: 18.1px;
+        height: 14.7px;
+      }
+
+      .circle {
+        background-color: #cdcde6;
         display:inline-block;
         vertical-align: middle;
         width: 16px;
         height: 16px;
-        background-color: #368bff;
         -moz-border-radius: 8px;
         -webkit-border-radius: 8px;
         border-radius: 8px;
+      }
+
+      .users, .clientNumber {
+        color: #a0a2c4;
+      }
+
+      .status {
+        display:inline-block;
+        margin-right: 12.3px;
+        margin-left: 4.1px;
+        font-size: 11px;
+        font-weight: 500;
+        color: #cdcde6;
+      }
+
+      .users {
+        display: inline-block;
+        font-size: 11px;
+        font-weight: 500;
+      }
+
+      .clientNumber {
+        display:inline-block;
+        margin-left: 3.6px;
+        margin-right: 3px;
+        font-size: 14px;
+        font-weight: 600;
+      }
     }
-    
-    .four .online{
-      display:inline-block;
-      margin-right: 12.3px;
-      margin-left:4.1px;
-      font-size: 11px;
-      font-weight: normal;
-      font-stretch: normal;
-      font-style: normal;
-      color: #368bff;
-    }
-    
-    .four .usersonline{
-      display:inline-block;
-      vertical-align: middle;
-      width: 18.1px;
-      height: 14.7px;
-    }
-    
-    .four .clientNumber{
-      display:inline-block;
-      margin-left: 3.6px;
-      margin-right:3px;
-      font-size: 14px;
-      font-weight: bold;
-      font-stretch: normal;
-      font-style: normal;
-      color: #368bff;
-    
-    }
-    
-    .four .users{
-      display:inline-block;
-      font-size: 11px;
-      font-weight: normal;
-      font-stretch: normal;
-      font-style: normal;
-      color: #368bff;
-    }
-    
-    .four .offline-circle{
-      display:inline-block;
-      vertical-align: middle;
-      width: 16px;
-      height: 16px;
-      -moz-border-radius: 8px;
-      -webkit-border-radius: 8px;
-      border-radius: 8px;
-      background-color: #cdcde6;
-    }
-    
-    .four .offlinecolor{
-      color: #a0a2c4;
+
+    .online {
+      .circle {
+        background-color: #368bff;
+      }
+
+      .status, .users, .clientNumber {
+        color: #368bff;
+      }
     }
   }
-} */
 
-.first{
+  .detail-row {
+    margin-left: 5px;
+    margin-right: 5px;
+
+    .qr-container {
+      margin-top: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  
+      .qrcode {
+        padding: 15px;
+        background: #ffffff;
+        border-radius: 17px;
+      }
+    }
+  }
+
+  .removeBorder {
+    border-bottom: none;
+  }
+}
+
+.darkContainer {
+  .server-header {
+    box-shadow: 0 3px 15px 0 #151626;
+    background-color: #2e2f4e;
+  }
+
+  .detail-row {
+    border-bottom: 2px solid #2e2f4e;
+  }
+
+  .removeBorder {
+    border-bottom: none;
+  }
+}
+
+/* .first{
      position: relative;
      text-align: center;
      margin-top: 46px;
@@ -239,5 +266,5 @@
   .balck{
     color: #000000;
   }
-}
+} */
 
