--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -204,6 +204,7 @@ html, body { height: 100%; scroll-behavior:smooth;}
 
 $segment-button-md-text-color: #007AFF !important;
 
+/**************** NEW - CHAD ****************/
 .profile-header {
   display: flex;
   justify-content: center;
@@ -304,10 +305,49 @@ $segment-button-md-text-color: #007AFF !important;
   }
 }
 
+.detail-row {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 2px solid rgba(34, 34, 34, 0.07);
+
+    ion-col {
+        padding: 0;
+    }
+
+    .left-col {
+        h1, h2 {
+            margin: 0;
+        }
+
+        h1 {
+            font-size: 11px;
+            font-weight: 700;
+            letter-spacing: 2.4px;
+            text-transform: capitalize;
+            color: #8888b0;
+            margin-bottom: 5px;
+        }
+
+        h2 {
+            font-size: 15px;
+            font-weight: 500;
+            letter-spacing: 0.8px;
+        }
+    }
+
+    .right-col {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+}
+
 .btn-row {
   margin-top: 55px;
   width: 85%;
 }
+
+/**************** OLD ****************/
 
 .offline-content {
   background-color:rgb(209, 81, 81);
