--- a/src/global.scss
+++ b/src/global.scss
@@ -288,7 +288,7 @@ pre {
 }
 
 .donatePopup {
-  --background: #f8f8ff;
+  --background: #ffffff;
   animation: animate;
   animation-duration: 300ms;
   animation-fill-mode: forwards;
@@ -314,7 +314,7 @@ pre {
 }
 
 .darkDonatePopup {
-  --background: #191a2f;
+  --background: #2b2c49;
   animation: animate;
   animation-duration: 300ms;
   animation-fill-mode: forwards;
