--- a/src/app/pages/feeds/bindservice/startbinding/startbinding.page.scss
+++ b/src/app/pages/feeds/bindservice/startbinding/startbinding.page.scss
@@ -1,4 +1,65 @@
-.first{
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px;
+
+    h1, p, h2, h3 {
+        width: 100%;
+        margin: 0;
+        padding: 0 10px;
+    }
+
+    h1 {
+        font-size: 27px;
+        font-weight: 800;
+        letter-spacing: 0.3px;
+    }
+
+    p {
+        margin: 10px 0px 40px;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 1.53;
+    }
+
+    h2 {
+        margin-bottom: 10px;
+        font-size: 12px;
+        font-weight: 300;
+        letter-spacing: 0.6px;
+    }
+
+    h3 {
+        padding: 0 40px;
+        font-size: 14px;
+        font-weight: 500;
+        text-align: center;
+        word-break: break-all;
+        border-radius: 17px;
+        background-color: #ffffff;
+        box-shadow: 0 3px 15px 0 #ededf0;
+        padding: 20px;
+    }
+}
+
+.darkContainer {
+    h3 {
+        box-shadow: 0 3px 15px 0 #151626;
+        background-color: #2b2c49;
+    }
+
+    .btns-row {
+        .confirm {
+            box-shadow: 0 3px 15px 0 #151626;
+        }
+    }
+}
+
+
+/* .first{
     margin-top: 60px;  
     font-size: 23px;
     font-weight: bold;
@@ -99,4 +160,4 @@
       .white{
           color:#ffffff;
       }
-  }
+  } */
