--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -347,6 +347,44 @@ $segment-button-md-text-color: #007AFF !important;
   width: 85%;
 }
 
+.btns-row {
+    margin-top: 30px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    .btn {
+        height: 45px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+    
+        ion-label {
+            font-size: 16px;
+            font-weight: 500;
+        }
+    }
+
+    .cancel {
+        border: solid 1.5px #368bff;
+
+        ion-label {
+            color: #368bff;
+        }
+    }
+    
+    .confirm {
+        box-shadow: 0 3px 15px 0 #ededf0;
+        background-color: #368bff;
+        
+        ion-label {
+            color: #ffffff;
+        }
+    }
+}
+
 /**************** OLD ****************/
 
 .offline-content {
