--- a/src/app/pages/feeds/home/channels/channels.page.html
+++ b/src/app/pages/feeds/home/channels/channels.page.html
@@ -7,12 +7,13 @@
   <!--on-refresher-->
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5">
     <ion-refresher-content
-      pullingIcon="arrow-dropdown"
+      class="refresh"
       pullingText="{{'common.pullToRefresh'|translate}}"
-      refreshingSpinner="circles"
-      refreshingText="">
+      pullingIcon="arrow-dropdown"
+      refreshingSpinner="crescent"
+      refreshingText="{{'common.Refreshing'|translate}}"
+    >
     </ion-refresher-content>
-  </ion-refresher>
   <div *ngIf="checkChannelIsMine() == 0" class="edit" (click)="clickEdit()">
     <ion-img src="./assets/images/edit.svg" *ngIf="!theme.darkMode"></ion-img>
     <ion-img src="./assets/images/edit-dark.svg" *ngIf="theme.darkMode"></ion-img>
