--- a/src/app/pages/feeds/profile/profile.page.html
+++ b/src/app/pages/feeds/profile/profile.page.html
@@ -9,7 +9,9 @@
       class="refresh"
       pullingText="{{'common.pullToRefresh'|translate}}"
       pullingIcon="arrow-dropdown"
-      refreshingText="">
+      refreshingSpinner="crescent"
+      refreshingText="{{'common.Refreshing'|translate}}"
+    >
     </ion-refresher-content>
   </ion-refresher>
 
