--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -44,7 +44,7 @@ ion-menu {
                 margin: 35px 0 0 25px;
                 width: 100%;
         
-                img {
+                img, ion-icon {
                     height: 30px;
                     width: 30px;
                 }
