--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -1,25 +1,78 @@
  <ion-content [class.darkContainer]="theme.darkMode">
-    <ion-grid>
-      <ion-row>
-        <ion-col size="12">
-          <ion-img src="assets/images/feeds-logo.svg" class="feedslogo"></ion-img>  
-          <p class="feeds white">{{'common.feeds'|translate}}</p>
-        </ion-col>
-      </ion-row>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <ion-img src="assets/images/feeds-logo.svg" class="feedslogo"></ion-img>  
+        <p class="feeds white">{{'common.feeds'|translate}}</p>
+      </ion-col>
+    </ion-row>
 
-      <ion-row class="top-110">
-          <ion-col size="12">
-              <p class="desktop white">{{ "SigninPage.des"| translate }}</p>
-              <p class="desktop white">{{ "SigninPage.des1"| translate }}</p>
-          </ion-col>
-      </ion-row>
-
-      <ion-row class="top-25">
+    <ion-row class="top-110">
         <ion-col size="12">
-          <ion-button expand="block" color="primary" (click)="signIn()" class="signbtn">
-            {{ "SigninPage.signIn"| translate }}
-          </ion-button>
+            <p class="desktop white">{{ "SigninPage.des"| translate }}</p>
+            <p class="desktop white">{{ "SigninPage.des1"| translate }}</p>
         </ion-col>
-      </ion-row>
-    </ion-grid> 
+    </ion-row>
+
+    <ion-row class="top-25">
+      <ion-col size="12">
+        <ion-button expand="block" color="primary" (click)="signIn()" class="signbtn">
+          {{ "SigninPage.signIn"| translate }}
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid> 
 </ion-content>
+
+<!-- <ion-content [class.darkContainer]="theme.darkMode">
+    <ion-slides #slide pager="true">
+      <ion-slide>
+         <ion-grid>
+             <ion-row>
+               <ion-col size="12">
+                 <ion-img src="assets/images/feeds-logo.svg" class="feedslogo"></ion-img>  
+                 <p class="feeds white">{{'common.feeds'|translate}}</p>
+               </ion-col>
+             </ion-row>
+       
+             <ion-row class="top-110">
+                 <ion-col size="12">
+                     <p class="desktop white">{{ "SigninPage.des"| translate }}</p>
+                     <p class="desktop white">{{ "SigninPage.des1"| translate }}</p>
+                 </ion-col>
+             </ion-row>
+       
+             <ion-row class="top-25">
+               <ion-col size="12">
+                 <ion-button expand="block" color="primary" (click)="signIn()" class="signbtn">
+                   {{ "SigninPage.signIn"| translate }}
+                 </ion-button>
+               </ion-col>
+             </ion-row>
+             <ion-row class="learnmore-row" (click)="learnMore(slide)">
+               <ion-label>Learn more about Feeds?</ion-label>
+             </ion-row>
+           </ion-grid> 
+      </ion-slide>
+      <ion-slide class="onboard-slide">
+        <ion-card class="onboard-card">
+          <ion-card-title>
+            What is feed?
+          </ion-card-title>
+          <ion-card-subtitle>
+             Follow your interests. <br>
+             Hear what people are talking about.  <br>
+             Join the conversation. <br>
+          </ion-card-subtitle>
+        </ion-card>
+        <ion-row class="btn-row">
+          <ion-button>
+            <ion-label>
+               {{ "SigninPage.signIn"| translate }}
+            </ion-label>
+          </ion-button>
+        </ion-row>
+      </ion-slide>
+    </ion-slides>
+     
+ </ion-content> -->
