--- a/src/app/pages/signin/signin.page.scss
+++ b/src/app/pages/signin/signin.page.scss
@@ -1,3 +1,17 @@
+.learnmore-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 50px;
+
+  ion-label {
+    font-size: 16px;
+    font-weight: 500;
+    color: #368bff;
+  }
+}
+
 .signbtn {
     position: absolute;
     width: 80%;
@@ -45,6 +59,40 @@
   text-align: center;
   color: #000000;
 }
+
+.onboard-slide {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+
+  .onboard-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 45px 30px;
+    border-radius: 17px;
+    background: #ffffff;
+    box-shadow: none;
+  
+    ion-card-title {
+      font-size: 21px;
+      font-weight: 700;
+      color: #000000;
+      padding: 45px 0 15px;
+    }
+  
+    ion-card-subtitle {
+      font-size: 16px;
+      font-weight: 500;
+      color: #161740;
+      text-transform: none;
+    }
+  }
+}
+
 
 .darkContainer{
   .white{
