--- a/src/app/pages/signin/signin.page.scss
+++ b/src/app/pages/signin/signin.page.scss
@@ -65,27 +65,35 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 40px 30px;
 
   .onboard-card {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 45px 30px;
+    padding: 60px 15px;
     border-radius: 17px;
     background: #ffffff;
     box-shadow: none;
+    margin: 0;
+    width: 100%;
+
+    img {
+      width: 168.3px;
+      height: 190.1px;
+      object-fit: contain;
+    }
   
     ion-card-title {
       font-size: 21px;
       font-weight: 700;
       color: #000000;
-      padding: 45px 0 15px;
+      padding: 60px 0 15px;
     }
   
     ion-card-subtitle {
-      font-size: 16px;
+      font-size: 14px;
       font-weight: 500;
       color: #161740;
       text-transform: none;
