--- a/src/app/pages/servers/server-info/server-info.html
+++ b/src/app/pages/servers/server-info/server-info.html
@@ -30,6 +30,24 @@
         </ion-col>
       </ion-row>
     </div>
+
+    <div style="margin-left: 34px; margin-right: 34px; margin-top: 25px;" *ngIf="address != ''">
+      <ion-button style="margin-top: 25px;" expand="block" mode="ios" (click)="addFeedSource()" [disabled]='buttonDisabled'>
+        <ion-label>{{'ServerInfoPage.addFeedSource' | translate}}</ion-label>
+      </ion-button>
+    </div>
+  
+    <div style="margin-left: 34px; margin-right: 34px; margin-top: 25px;" *ngIf="address == '' && !isBindServer">
+      <ion-button style="margin-top: 25px;" expand="block" mode="ios"  color="danger" (click)="removeFeedSource()">
+        <ion-label>{{'ServerInfoPage.removeFeedSource' | translate}}</ion-label>
+      </ion-button>
+    </div>
+  
+    <div style="margin-left: 34px; margin-right: 34px; margin-top: 25px;" *ngIf="address == '' && isBindServer">
+      <ion-button style="margin-top: 25px;" expand="block" mode="ios"  color="danger" (click)="deleteFeedSource()">
+        <ion-label>{{'ServerInfoPage.deleteFeedSource' | translate}}</ion-label>
+      </ion-button>
+    </div> 
     <!-- <ion-img [src]="!theme.darkMode ? './assets/images/edit.svg' : './assets/images/edit-dark.svg'"></ion-img> -->
   </ion-grid>
 </ion-content>
