--- a/src/app/components/following/following.component.html
+++ b/src/app/components/following/following.component.html
@@ -12,7 +12,47 @@
   </ion-row>
 </div>
 
-<div *ngFor="let channel of followingList" [class.darkContainer]="theme.darkMode">
+<ion-list *ngIf="followingList.length > 0" class="channel-list" [class.darkChannelList]="theme.darkMode">
+  <ion-item
+    *ngFor="let channel of followingList"
+    [class.removeBorder]="channel === followingList[followingList.length - 1]"
+    lines="none"
+  >
+    <ion-row class="channel-row ion-activatable ripple">
+      <ion-col
+        size="2.5"
+        (click)="navTo(channel.nodeId, channel.id)"
+        class="left-col"
+      >
+        <div class="avatar-container">
+          <img src={{parseAvatar(channel.avatar)}}>
+          <div class="offline" [class.online]="nodeStatus[channel.nodeId] === 0"></div>
+        </div>
+      </ion-col>
+      <ion-col
+        size="8"
+        class="middle-col"
+        (press)="pressName(channel.name)"
+      >
+        <ion-label>{{ moreName(channel.name) }}</ion-label>
+        <ion-row>
+          <img src="./assets/images/bubble2.svg"> <br>
+          <p><span>{{ channel.subscribers }}</span> {{ 'common.followers' | translate }}</p>
+        </ion-row>
+      </ion-col>
+      <ion-col size="1.5" class="right-col" (click)="menuMore(channel.nodeId, channel.id, channel.name)">
+        <img [src]="!theme.darkMode ? './assets/images/dots-three-vertical.svg' : './assets/images/dots-three-vertical-dark.svg'">
+      </ion-col>
+      <ion-ripple-effect></ion-ripple-effect>
+    </ion-row>
+  </ion-item>
+
+  <div class="new-feed-div">
+    <div class="new-feed" (click)="exploreFeeds()">{{'FollowingComponent.exploreFeeds'|translate}}</div>
+  </div>
+</ion-list>
+
+<!-- <div *ngFor="let channel of followingList" [class.darkContainer]="theme.darkMode">
 
   <div class="image-text-layout-div">
     <ion-card-content class="ion-no-padding ion-no-margin">
@@ -48,9 +88,7 @@
   </div> 
 
   <div class="line-div white-line"></div>
-</div>
+</div> -->
 
-<div class="new-feed-div" *ngIf="followingList.length > 0">
-  <div class="new-feed" (click)="exploreFeeds()">{{'FollowingComponent.exploreFeeds'|translate}}</div>
-</div>
+
 
