--- a/src/app/pages/feeds/search/search.page.html
+++ b/src/app/pages/feeds/search/search.page.html
@@ -1,8 +1,8 @@
 <ion-header *ngIf="connectionStatus == 1">
   <div class="offline-header"></div>
 </ion-header>
-<ion-content>
 
+<ion-content>
   <div class="search-container" [class.dark-search-container]="theme.darkMode">
     <ion-searchbar placeholder="{{ 'SearchPage.searchFeeds' | translate }}" (ionInput)="getItems($event)" mode="ios"></ion-searchbar>
   </div>
@@ -31,7 +31,54 @@
     </ion-refresher-content>
   </ion-refresher>
 
-  <div *ngFor="let channel of channelList let i=index" [class.darkContainer]="theme.darkMode">
+  <ion-list *ngIf="channelList.length > 0" class="channel-list" [class.darkChannelList]="theme.darkMode">
+    <ion-item
+      *ngFor="let channel of channelList let i=index"
+      [class.removeBorder]="channel === channelList[channelList.length - 1]"
+      lines="none"
+    >
+      <ion-row class="channel-row ion-activatable ripple">
+        <ion-col
+          size="2.5"
+          class="left-col"
+          (click)="navTo(channel.nodeId, channel.id)"
+        >
+          <div class="avatar-container">
+            <img src={{parseChannelAvatar(channel.avatar)}}>
+            <div class="offline" [class.online]="nodeStatus[channel.nodeId] === 0"></div>
+          </div>
+        </ion-col>
+        <ion-col
+          size="6.5"
+          class="middle-col"
+          (press)="pressName(channel.name)"
+        >
+          <ion-label>{{ moreName(channel.name) }}</ion-label>
+          <ion-row>
+            <img src="./assets/images/bubble2.svg"> <br>
+            <p><span>{{ channel.subscribers }}</span> {{ 'common.followers' | translate }}</p>
+          </ion-row>
+        </ion-col>
+        <ion-col size="3" class="right-col">
+          <ion-button *ngIf="!channel.isSubscribed" class="unsubscribed" fill="outline" (click)="subscribe(channel.nodeId, channel.id)">
+            <ion-label >{{'SearchPage.follow' | translate}}</ion-label>
+          </ion-button>
+          <ion-button *ngIf="channel.isSubscribed" (click)="unsubscribe(channel.nodeId, channel.name, channel.id)">
+            <ion-label>{{ 'SearchPage.following' | translate }}</ion-label>
+          </ion-button>
+        </ion-col>
+        <ion-ripple-effect></ion-ripple-effect>
+      </ion-row>
+    </ion-item>
+
+    <div class="new-feed-div" (click)="addfeedssource()" *ngIf="channelList.length > 0">
+      <div class="new-feed">{{ "SearchPage.addfeedssource" | translate }}</div>
+    </div> 
+  </ion-list>
+
+</ion-content>
+
+  <!-- <div *ngFor="let channel of channelList let i=index" [class.darkContainer]="theme.darkMode">
       <ion-grid>
         <ion-row>
           <ion-col  
@@ -39,7 +86,6 @@
             size="2.25"
             size-lg="2.25"
           >
-            <!-- <img-loader [src]="getAppIcon(app)" useImg></img-loader> -->
             <div class="channel-img-small">
               <ion-avatar class="avatar-div" style="position: relative;">
                 <div class="feed-source-card-status circlePosition">
@@ -113,6 +159,5 @@
 
   </div>
 
-  <div class="addfeedssource1" (click)="addfeedssource()" *ngIf="channelList.length > 0">{{"SearchPage.addfeedssource"|translate}}</div>
+  <div class="addfeedssource1" (click)="addfeedssource()" *ngIf="channelList.length > 0">{{"SearchPage.addfeedssource"|translate}}</div> -->
 
-</ion-content>
