--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -25,8 +25,8 @@
 </ion-content>
  -->
 
-<ion-content [class.darkContainer]="theme.darkMode">
-    <ion-slides #slide pager="true">
+<ion-content>
+    <ion-slides #slide pager="true" [class.darkSlides]="theme.darkMode">
       <ion-slide>
          <ion-grid>
              <ion-row>
