--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -204,7 +204,7 @@ html, body { height: 100%; scroll-behavior:smooth;}
 
 $segment-button-md-text-color: #007AFF !important;
 
-/**************** NEW - CHAD ****************/
+/********************** GLOBAL PROFILE HEADER **********************/
 .profile-header {
   display: flex;
   justify-content: center;
@@ -239,6 +239,7 @@ $segment-button-md-text-color: #007AFF !important;
   }
 }
 
+/********************** GLOBAL SEARCH **********************/
 .search-container {
   display: flex;
   justify-content: center;
@@ -273,6 +274,7 @@ $segment-button-md-text-color: #007AFF !important;
   }
 }
 
+/********************** GLOBAL EMPTY FEEDS **********************/
 .empty-container {
   min-height: 100%;
   display: flex;
@@ -305,6 +307,7 @@ $segment-button-md-text-color: #007AFF !important;
   }
 }
 
+/********************** GLOBAL PROFILE/SERVER DETAILS **********************/
 .detail-row {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -342,6 +345,7 @@ $segment-button-md-text-color: #007AFF !important;
     }
 }
 
+/********************** GLOBAL BUTTONS **********************/
 .btn-row {
   margin-top: 55px;
   width: 85%;
@@ -383,6 +387,162 @@ $segment-button-md-text-color: #007AFF !important;
             color: #ffffff;
         }
     }
+}
+
+/********************** GLOBAL CHANNEL LISTS **********************/
+.channel-list {
+  background: transparent;
+  padding: 0;
+  margin: 0;
+
+  ion-item {
+    --inner-padding-end: 0px;
+    --padding-start: 0px;
+    --background: transparent;
+    border-bottom: 1.5px solid #f0f1ff;
+
+    .channel-row {
+      width: 100%;
+
+      .left-col {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+
+        .avatar-container {
+          position: relative;
+          border-radius: 50%;
+    
+          img {
+            border-radius: 50%;
+            object-fit: cover;
+            overflow: hidden;
+            max-height: 55px;
+            max-width: 55px;
+          }
+
+          .offline {
+            width: 15px;
+            height: 15px;
+            position: absolute;
+            z-index: 10;
+            top: 0px;
+            left: 0px;
+            background: #cdcde6;
+            border-radius: 100%;
+            border: 2px solid #f8f8ff;
+          }
+
+          .online {
+            background: #2dd36f;
+          }
+        }
+      }
+
+      .middle-col {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;  
+
+          ion-label {
+            font-size: 16px;
+            font-weight: 700;
+            width: 100%;
+          }
+
+          ion-row {
+            padding: 0;
+            display: flex;
+            align-items: center;
+
+            img {
+              width: 18.1px;
+              height: 14.7px;
+              object-fit: contain;
+              margin-right: 3px;
+            }
+
+            p {
+              margin: 0;
+              font-size: 10px;
+              font-weight: 600;
+              color: #a0a2c4;
+
+              span {
+                font-size: 13px;
+                font-weight: 700;
+              }
+            }
+          }
+      }
+
+      .right-col {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+
+        img {
+          width: 18.4px;
+          height: 4.4px;
+          object-fit: contain;
+        }
+      
+        ion-button {
+          width: 76.8px;
+          height: 28px;
+          --border-radius: 30px;
+          --box-shadow: none;
+      
+          ion-label {
+            font-size: 9px !important;
+            font-weight: 700;
+            padding: 0;
+            overflow: hidden;
+          }
+        }
+
+        .unsubscribed {
+          --border-width: 1.5px;
+          --border-style: solid;
+          --border-color: #8888b0;
+          --background: transparent;
+          --background-activated: transparent;
+          --background-activated-opacity: none;
+          --background-focused: transparent;
+          --background-focused-opacity: none;
+
+          ion-label {
+             --color:#8888b0;
+          }
+        }
+      }
+    }
+  }
+
+  .removeBorder {
+    border-bottom: none;
+  }
+}
+
+.darkChannelList {
+  ion-item {
+    border-bottom: 1.5px solid #2f305a;
+
+    .channel-row {
+      .left-col {
+        .avatar-container {
+          .offline {
+            border: 2px solid #191a2f;
+          }
+        }
+      }
+    }
+  }
+
+  .removeBorder {
+    border-bottom: none;
+  }
 }
 
 /**************** OLD ****************/
